<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Config">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/menu"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginStart="70dp"
            android:background="@color/cardview_shadow_end_color"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:orientation="vertical">

        <Button
            android:id="@+id/txtInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/cardview_shadow_end_color"
            android:text="@string/inicio"
            android:textAlignment="viewStart"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/txtProg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/cardview_shadow_end_color"
            android:text="@string/prog"
            android:textAlignment="viewStart"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/txtLed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/cardview_shadow_end_color"
            android:text="@string/led"
            android:textAlignment="viewStart"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/txtConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/cardview_shadow_end_color"
            android:text="@string/conf"
            android:textAlignment="viewStart"
            android:textColor="@color/white" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/card"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:text="@string/host"/>
                <EditText
                    android:id="@+id/edtIP"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:hint="@string/ip"
                    android:layout_marginStart="10dp"
                    android:textColorHint="@color/material_on_primary_disabled"
                    android:textColor="@color/materialcolorpicker__blue"/>
                <Button
                    android:id="@+id/btn_save_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/Confirmar"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/card">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/server"/>

            <EditText
                android:id="@+id/serverNtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/ntp"
                android:textColorHint="@color/material_on_primary_disabled"
                android:textColor="@color/materialcolorpicker__blue"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/port"/>
            <EditText
                android:id="@+id/portNtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/materialcolorpicker__blue"
                android:textColorHint="@color/material_on_primary_disabled"
                android:inputType="number"
                android:textSize="20sp"
                android:hint="@string/hintPort"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/timezone"/>
            <EditText
                android:id="@+id/timezoneNtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/materialcolorpicker__blue"
                android:textColorHint="@color/material_on_primary_disabled"
                android:textSize="20sp"
                android:hint="@string/hintTimezone"
                android:inputType="numberSigned"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_cancel_ntp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/Cancelar"/>

                <Button
                    android:id="@+id/btn_confirma_ntp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/Confirmar"/>
            </LinearLayout>
            </LinearLayout>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:background="@color/card"
                android:layout_height="160dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/card"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="Reset"/>
                    <Button
                        android:id="@+id/btn_default_reset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/reset"/>
                    <Button
                        android:id="@+id/btn_reinicia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reiniciar"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>