<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Led">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginStart="70dp"
                android:background="@color/cardview_shadow_end_color"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black"
            android:orientation="vertical">

            <Button
                android:id="@+id/txtInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/cardview_shadow_end_color"
                android:text="@string/inicio"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/txtProg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/cardview_shadow_end_color"
                android:text="@string/prog"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/txtLed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/cardview_shadow_end_color"
                android:text="@string/led"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/txtConf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/cardview_shadow_end_color"
                android:text="@string/conf"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background"
            android:paddingTop="140dp"
            android:orientation="vertical">
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:text="@string/foto"/>
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp">
                <RadioButton
                    android:id="@+id/radio_man"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:text="@string/man"/>
                <RadioButton
                    android:id="@+id/radio_auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:text="@string/auto"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/slider"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleY="1.5"
                android:scaleX="0.8"
                android:valueTo="60"
                android:valueFrom="10"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>