<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="25dp"
    android:layout_marginLeft="5dp"
    android:layout_marginStart="5dp"
    tools:context=".FragmentProgram">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center">

                    <CheckBox
                        android:id="@+id/cb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/cb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/cb3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/cb4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/cb5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/cb6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/cb7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:paddingBottom="20dp"
                    android:background="@color/card">

                    <TextView
                        android:id="@+id/txtDomingo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:paddingStart="2dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/Domingo" />

                    <TextView
                        android:id="@+id/txtSegunda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:paddingStart="2dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/Segunda" />

                    <TextView
                        android:id="@+id/txtTerça"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:paddingStart="2dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/Terca" />

                    <TextView
                        android:id="@+id/txtQuarta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:paddingStart="2dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/Quarta" />

                    <TextView
                        android:id="@+id/txtQuinta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:paddingStart="2dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/Quinta" />

                    <TextView
                        android:id="@+id/txtSexta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:paddingStart="2dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/Sexta" />

                    <TextView
                        android:id="@+id/txtSabado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:paddingLeft="2dp"
                        android:paddingStart="2dp"
                        android:paddingEnd="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/Sabado" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/card">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/hr_l" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/hr_d" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="20dp"
                    android:background="@color/card">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/clockLiga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:text="00:00" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"/>

                    <TextView
                        android:id="@+id/clockDesliga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:text="00:00" />
                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"/>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_prog_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/Cancelar" />

                <Button
                    android:id="@+id/btn_prog_Confirmar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/Confirmar" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>