<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_shadow_end_color"
                android:layout_gravity="end"
                android:layout_marginStart="70dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black"
            android:orientation="vertical">

            <Button
                android:id="@+id/txtInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/inicio"
                android:background="@color/cardview_shadow_end_color"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/txtProg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/cardview_shadow_end_color"
                android:text="@string/prog"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/txtLed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/cardview_shadow_end_color"
                android:text="@string/led"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/txtConf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/cardview_shadow_end_color"
                android:text="@string/conf"
                android:textAlignment="viewStart"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tela"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background">

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:text="@string/inicio"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/card1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="265dp"
                android:layout_height="165dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/led"
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:layout_margin="8dp"
                    android:background="@color/black" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="409dp"
                android:layout_height="120dp"
                app:cardBackgroundColor="@color/card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <Switch
                    android:id="@+id/btn_pump"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="172dp"
                    android:text="@string/btn_pump"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>